# backend/pkg/api/input/obstacle.go
@@ -5,6 +5,8 @@ type CreateObstacleRequest struct {
 	Type        int        `json:"type" validate:"required"`
 	Description string     `json:"description"`
 	DangerLevel int        `json:"dangerLevel" validate:"required"`
+	Nodes       [2]float64 `json:"nodes" validate:"required"`
+	NearestDistance float64 `json:"nearestDistance" validate:"required"`
 }
 
 type UpdateObstacleRequest struct {
@@ -12,4 +14,6 @@ type UpdateObstacleRequest struct {
 	Type        int        `json:"type" validate:"required"`
 	Description string     `json:"description"`
 	DangerLevel int        `json:"dangerLevel" validate:"required"`
+	Nodes       [2]float64 `json:"nodes" validate:"required"`
+	NearestDistance float64 `json:"nearestDistance" validate:"required"`
 }
